feat: basic music functionality

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -10,5 +10,16 @@ pay.triedPayingNothing=You cannot pay 0 or less mel
 pay.triedOverPaying=You tried paying **{0}** mel but only have **{1}** mel
 pay.payed=You gave {0} **{1}** mel. You have **{2}** mel left
 pay.triedPayingSelf=You cannot pay yourself
+
 avatar.title=Avatar of {0}
 avatar.description=Links: {0}
+
+play.title=Track added by {0}
+play.description=[#0]({0}) **{1}** `[{2}]`
+
+nowplaying.title=Now playing
+nowplaying.songLink=**[{0}]({1})**
+nowplaying.progressFieldTitle=Progress:
+nowplaying.progressFieldValue=```ansi\n{1} {0} {2}```
+nowplaying.statusFieldTitle=Status:
+nowplaying.statusFieldValue=**{0}**
