feature: idInfoCommand and InfoCommand

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -10,5 +10,20 @@ pay.triedPayingNothing=You cannot pay 0 or less mel
 pay.triedOverPaying=You tried paying **{0}** mel but only have **{1}** mel
 pay.payed=You gave {0} **{1}** mel. You have **{2}** mel left
 pay.triedPayingSelf=You cannot pay yourself
+
 avatar.title=Avatar of {0}
 avatar.description=Links: {0}
+
+idInfo.info=Snowflake created at {0}\nMillis: `{1}`
+
+info.aboutFieldTitle=About
+info.aboutFieldValue=Melijn is an opensource discord bot written in kotlin with <3 by **{0}**. \
+  Melijn is made to support a big user base and aimed at providing moderation, administration, customization, utilities, \
+  music and more. If you have problems or suggestion then don't hesitate to report them in our support server below :) \
+  \n\n**[Support Server]({1}) • [Bot Invite]({2}) • [Website]({3})**\n\u200b
+info.infoFieldTitle=Info
+info.infoFieldValue=**Coded in** Kotlin and Java\
+  \n**Commands** {0}\n\u200b
+info.versionsFieldTitle=Versions
+info.versionsFieldValue=**Java Version** {0}\
+  \n**Kotlin Version** {1}
