--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -30,10 +30,14 @@ queue.queueEntry=[#{0}]({1}) - {2} `[{3}]`
 queue.title=Queue
 queue.fakefooter=\n\nQueue duration: **{0}**\
   \nQueue size: **{1}**
-play.manyAddedTitle=Track added by {0}
+
+play.manyAddedTitle=Tracks added by {0}
 play.manyAddedDescription=**{0}** tracks, positions: #{1} -> #{2}
+
 music.userNotInVC=You are not in a voice channel!
+
 connect.success=I have been summoned to {0}
+
 skip.manyTracks=Skipped **{0}** tracks\n[Previous]({1}): {2} `[{3} / {4}]`
 skip.noNextTrack=No next track, destroyed the MusicPlayer
 skip.nextTrack=[Next]({0}): {1} `[{2}]`
