--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -27,3 +27,7 @@ info.infoFieldValue=**Coded in** Kotlin and Java\
 info.versionsFieldTitle=Versions
 info.versionsFieldValue=**Java Version** {0}\
   \n**Kotlin Version** {1}
+ping.gatewayPing=Gateway: {0}ms
+ping.sendMessagePing=SendMessage: {0}ms
+ping.editMessagePing=EditMessage: {0}ms
+ping.title=🏓 Ping!
