feat: seek and clearQueue commands

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -56,3 +56,9 @@ info.infoFieldValue=**Coded in** Kotlin and Java\
 info.versionsFieldTitle=Versions
 info.versionsFieldValue=**Java Version** {0}\
   \n**Kotlin Version** {1}
+
+clearQueue.cleared=Cleared
+
+shortTimeConverter.badFormatDetected={0} is not formatted as (hh:)mm:ss
+
+seek.seeked=Seeked to `[{0} / {1}]`
