feat: seek, move, remove

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -59,6 +59,12 @@ info.versionsFieldValue=**Java Version** {0}\
 
 clearQueue.cleared=Cleared
 
-shortTimeConverter.badFormatDetected={0} is not formatted as (hh:)mm:ss
+shortTimeConverter.badFormatDetected=`{0}` is not formatted as (hh:)mm:ss
+intRangeConverter.badFormat=`{0}` is not a valid intRange (e.g. `4-9` or `1-3`, inclusive ranges btw).
 
 seek.seeked=Seeked to `[{0} / {1}]`
+seek.forwarded=Forwarded to `[{0} / {1}]`
+seek.rewinded=Rewinded to `[{0} / {1}]`
+move.invalidIndex=`{0}` is not a valid track index, use /queue for viewing indices
+move.moved=Moved the **{0}** at position **{1}** to **{2}**
+
