--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -15,7 +15,7 @@ avatar.title=Avatar of {0}
 avatar.description=Links: {0}
 
 play.title=Track added by {0}
-play.description=[#0]({0}) **{1}** `[{2}]`
+play.addedOne=[#{0}]({1}) **{2}** `[{3}]`
 
 nowplaying.title=Now playing
 nowplaying.songLink=**[{0}]({1})**
