--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -31,3 +31,13 @@ ping.gatewayPing=Gateway: {0}ms
 ping.sendMessagePing=SendMessage: {0}ms
 ping.editMessagePing=EditMessage: {0}ms
 ping.title=🏓 Ping!
+roleInfo.infoTitle=Role Info
+roleInfo.infoDescription=**Name** {0}\n\
+  **ID** {1}\n\
+  **Creation Time** {2}\n\
+  **Position** {3}/{4}\n\
+  **Mentionable** {5}\n\
+  **Hoisted** {6}\n\
+  **Managed** {7}\n\
+  **Color** {8} | {9} | {10}\n\
+  **Can Melijn Interact** {11}
