feat: beginning of playlist commands

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -1,6 +1,6 @@
 balance.show=You have **{0}** mel
 
-flip.flipped=Landed on **{0, select, 0 { Heads } other { Tails }}**. {1, select, 0 { Won } other { Lost }} **{2}** mel, your new balance is {3}
+flip.flipped=Landed on **{0, select, 0 {Heads} other {Tails}}**. {1, select, 0 {Won} other {Lost}} **{2}** mel, your new balance is {3}
 flip.noMels=You don't have a single mel to your name - there is nothing to flip
 
 flip.triedBettingNothing=You cannot bet 0 or less mel
@@ -24,7 +24,7 @@ nowplaying.progressFieldValue=```ansi\n{1} {0} {2}```
 nowplaying.statusFieldTitle=Status:
 nowplaying.statusFieldValue=**{0}**
 
-queue.playingEntry=[{0, select, true { Paused } other { Playing }}]({1}) - **{2}** `[{3} / {4}]`
+queue.playingEntry=[{0, select, true {Paused} other {Playing}}]({1}) - **{2}** `[{3} / {4}]`
 queue.queueEntry=[#{0}]({1}) - {2} `[{3}]`
 
 queue.title=Queue
@@ -65,6 +65,20 @@ intRangeConverter.badFormat=`{0}` is not a valid intRange (e.g. `4-9` or `1-3`, 
 seek.seeked=Seeked to `[{0} / {1}]`
 seek.forwarded=Forwarded to `[{0} / {1}]`
 seek.rewinded=Rewinded to `[{0} / {1}]`
+
 move.invalidIndex=`{0}` is not a valid track index, use /queue for viewing indices
 move.moved=Moved the **{0}** at position **{1}** to **{2}**
 
+play.noMatches=No matches!
+
+loop.queue.looped=Queue looping **{0, select, true {enabled} other {disabled}}**
+loop.single.looped=Track looping **{0, select, true {enabled} other {disabled}}**
+pause.paused=**{0, select, true {Paused} other {Resumed}}** the playing track
+shuffle.shuffled=Shuffled the queue
+playlist.add.added=Added **{0}** to your playlist `{1}` at #{2}
+playlist.list.listTitle=Playlist of {0}
+playlist.list.fakeFooter=\n\nPlaylist duration: **{0}**\
+  \nPlaylist size: **{1}**
+playlist.playlistArgDoesNotExist=`{0}` is not a valid playlist, it does not exist
+playlist.list.all.playlistEntry={0} - {1} - [{2}] - {3} - [{4}]
+playlist.list.all.listTitle=Playlist List of {0}
