feat: playlist commands

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -75,10 +75,19 @@ loop.queue.looped=Queue looping **{0, select, true {enabled} other {disabled}}**
 loop.single.looped=Track looping **{0, select, true {enabled} other {disabled}}**
 pause.paused=**{0, select, true {Paused} other {Resumed}}** the playing track
 shuffle.shuffled=Shuffled the queue
+
 playlist.add.added=Added **{0}** to your playlist `{1}` at #{2}
+playlist.add.addedMany=Added **{0}** tracks to your playlist `{1}` at positions #{2} -> ${3}
 playlist.list.listTitle=Playlist of {0}
 playlist.list.fakeFooter=\n\nPlaylist duration: **{0}**\
   \nPlaylist size: **{1}**
 playlist.playlistArgDoesNotExist=`{0}` is not a valid playlist, it does not exist
-playlist.list.all.playlistEntry={0} - {1} - [{2}] - {3} - [{4}]
+playlist.list.all.playlistEntry={0} - {1} - [{2}] - {3} - [{4, date, short} {4, time, short}]
 playlist.list.all.listTitle=Playlist List of {0}
+playlist.invalidTrackIndex=`{0, select, true {{1}} other {{1}-{2}}}` is not a valid playlist-track index\
+  {0, select, true {} other { range}}: `/playlist tracks` to view valid indexes
+playlist.remove.removedTrack=Removed [#{0}]({1}) - **{2}** from `{3}`
+playlist.remove.removedTracks=Removed {0} tracks from **{1}**
+playlist.add.trackNoFetch=All requested tracks could not be fetched
+playlist.add.fetching=Fetching all unresolved tracks, this can take a while .. #{0}/{1}
+playlist.load.queued=Loaded `{0}` tracks from **{1}** into the queue
