--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -41,3 +41,21 @@ roleInfo.infoDescription=**Name** {0}\n\
   **Managed** {7}\n\
   **Color** {8} | {9} | {10}\n\
   **Can Melijn Interact** {11}
+userInfo.userInfoSection=```INI\n[User Info]```\
+  **Name:** {0}\n\
+  **Discriminator:** {1}\n\
+  **ID:** {2}\n\
+  **Bot:** {3, select, true {yes} other {no}}\n\
+  **Supports Melijn:** {4, select, true {yes} other {no}}\n\
+  **Avatar:** [link]({5})\n\
+  **Banner:** {6, select, true {[link]({7})} other {}}\n\
+  **Creation Time:** {8}\n\
+  **Public Flags:** {9}\n\u200b
+userInfo.memberInfoSection=```INI\n[Member Info]``` \
+  **Roles:** {0}\n\
+  **Nickname:** {1}\n\
+  **Server Owner:** {2, select, true {yes} other {no}}\n\
+  **Join Time:** {3}\n\
+  **Boost Time:** {4} \n\
+  **Voice Status:** {5, select, true {Connected} other {Disconnected}} {6} \n\
+  **Can Melijn Interact:** {7, select, true {yes} other {no}}
