feat: EffectsExtension.kt

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -89,3 +89,22 @@ playlist.invalidTrackIndex=`{0, select, true {{1}} other {{1}-{2}}}` is not a va
 playlist.remove.removedTrack=Removed [#{0}]({1}) - **{2}** from `{3}`
 playlist.remove.removedTracks=Removed {0} tracks from **{1}**
 playlist.load.queued=Loaded `{0}` tracks from **{1}** into the queue
+
+effect.speed.show=Current music-player speed: `{0}%`
+effect.speed.changed=Changed the player speed to: `{0}%`
+effect.pitch.show=Current music-player pitch: `{0}%`
+effect.pitch.changed=Changed the player pitch to: `{0}%`
+effect.rate.show=Current music-player rate: `{0}%`
+effect.rate.changed=Changed the player rate to: `{0}%`
+effect.channelMix.reset=The ChannelMix filter has been reset
+effect.channelMix.mono=The ChannelMix filter has been put into the mono preset
+effect.channelMix.show=The ChannelMix filter is currently set to (rightToLeft: **{0}%**, leftToRight: **{1}%**, leftToLeft: **{2}%**, rightToRight: **{3}%**)
+effect.channelMix.changed=Set the ChannelMix filter to (rightToLeft: **{0}%**, leftToRight: **{1}%**, leftToLeft: **{2}%**, rightToRight: **{3}%**)
+
+effect.distortion.reset=Reset the distortion effect
+effect.distortion.show=Current distortion filter: scale **{0}%**, offset **{1}%**, sinScale **{2}%**, sinOffset **{3}%**, cosScale **{4}%**, cosOffset **{5}%**, tanScale **{6}%**, tanOffset **{7}%**
+effect.distortion.changed=Distortion filter changed to: scale **{0}%**, offset **{1}%**, sinScale **{2}%**, sinOffset **{3}%**, cosScale **{4}%**, cosOffset **{5}%**, tanScale **{6}%**, tanOffset **{7}%**
+
+effect.tremolo.reset=Reset the tremolo effect
+effect.tremolo.show=Current tremolo filter: frequency **{0}%**, depth **{1}%**
+effect.tremolo.changed=Tremolo filter changed to: frequency **{0}%**, depth **{1}%**
