--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -59,3 +59,36 @@ userInfo.memberInfoSection=```INI\n[Member Info]``` \
   **Boost Time:** {4} \n\
   **Voice Status:** {5, select, true {Connected} other {Disconnected}} {6} \n\
   **Can Melijn Interact:** {7, select, true {yes} other {no}}
+arguments.guildId.noGuild=The given serverId does not resolve to a server
+serverInfo.guildOnlyOrArgumentPassed=Server info is guild only unless an argument is passed
+serverInfo.responseDescription=```INI\n[General Information]```\
+  **Name:** {0}\n\
+  **ID:** {1}\n\
+  **Owner:** {2}\n\
+  **Creation Time:** {3}\n\
+  **Verification Level:** {4}\n\
+  **Multi Factor Authentication Level:** {5}\n\
+  **Content Filter Level:** {6}\n\
+  **NSFW Level:** {7}\n\
+  **Melijn Donator Linked?:** {8, select, true{yes} other{no} }\n\
+  \u200b\n\
+  ```INI\n[Statistic Information]```\
+  **Members:** {9}\n\
+  **Users:** {10} ({11}% of members)\n\
+  **Bots:** {12} ({13}% of members)\n\
+  **Boosts:** {14}\n\
+  **Boost Tier:** {15}\n\
+  **Roles:** {16}\n\
+  **Text Channels:** {17}\n\
+  **Voice Channels:** {18}\n\
+  **Categories:** {19}\n\
+  \u200b\n\
+  ```INI\n[Images]```\
+  **Icon:** {20, select, true {[link]({21})} other {}}\n\
+  **Banner:** {22, select, true {[link]({23})} other {}}\n\
+  **Splash:** {24, select, true {[link]({25})} other {}}
+serverBoostTier={0, select, 0 {None} other {Level {0}}}
+serverMFATier={0, select, 0 {Disabled} other {Enabled}}
+serverVerificationLevel={0, select, 0 {None} 1 {Low} 2 {Medium} 3 {High} other {Very High}}
+serverContentFilterLevel={0, select, 0 {Disabled} 1 {Members without roles} other {All members}}
+serverNSFWLevel={0, select, 0 {Default} 1 {Explicit} 2 {Safe} other {Age Restricted}}
