feat: vibrato translations

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -109,6 +109,10 @@ effect.tremolo.reset=Reset the tremolo effect
 effect.tremolo.show=Current tremolo filter: frequency **{0}%**, depth **{1}%**
 effect.tremolo.changed=Tremolo filter changed to: frequency **{0}%**, depth **{1}%**
 
+effect.vibrato.reset=Reset the vibrato effect
+effect.vibrato.show=Current vibrato filter: frequency **{0}%**, depth **{1}%**
+effect.vibrato.changed=Tremolo vibrato changed to: frequency **{0}%**, depth **{1}%**
+
 ping.gatewayPing=Gateway: {0}ms
 ping.sendMessagePing=SendMessage: {0}ms
 ping.editMessagePing=EditMessage: {0}ms
