--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -178,3 +178,6 @@ serverMFATier={0, select, 0 {Disabled} other {Enabled}}
 serverVerificationLevel={0, select, 0 {None} 1 {Low} 2 {Medium} 3 {High} other {Very High}}
 serverContentFilterLevel={0, select, 0 {Disabled} 1 {Members without roles} other {All members}}
 serverNSFWLevel={0, select, 0 {Default} 1 {Explicit} 2 {Safe} other {Age Restricted}}
+effect.lowpass.reset=The lowpass effect was reset
+effect.lowpass.show=Lowpass is currently set to: **{0}**
+effect.lowpass.changed=Lowpass has been set to: **{0}**
