feat: rotation and karaoke filters

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -181,3 +181,11 @@ serverNSFWLevel={0, select, 0 {Default} 1 {Explicit} 2 {Safe} other {Age Restric
 effect.lowpass.reset=The lowpass effect was reset
 effect.lowpass.show=Lowpass is currently set to: **{0}**
 effect.lowpass.changed=Lowpass has been set to: **{0}**
+
+effect.karaoke.reset=The karaoke effect was reset
+effect.karaoke.show=Karaoke is currently set to (level: **{0}%**, monoLevel: **{1}%**, filterBand: **{2}**, filterWidth: **{3}**)
+effect.karaoke.changed=Karaoke has been set to (level: **{0}%**, monoLevel: **{1}%**, filterBand: **{2}**, filterWidth: **{3}**)
+
+effect.rotation.reset=The rotation effect was reset
+effect.rotation.show=Rotation is currently set to: **{0}%**
+effect.rotation.changed=Rotation has been set to: **{0}%**
