feat: musicplayer commands

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -189,3 +189,13 @@ effect.karaoke.changed=Karaoke has been set to (level: **{0}%**, monoLevel: **{1
 effect.rotation.reset=The rotation effect was reset
 effect.rotation.show=Rotation is currently set to: **{0}%**
 effect.rotation.changed=Rotation has been set to: **{0}%**
+
+musicPlayer.playerInfo=**Playing:** {0}\
+  \n**Queue Size:** {1}\
+  \n**Looped|LoopedQueue:** {2}|{3}\
+  \n**Paused:** {4, select, true {yes} other {no}}
+musicPlayer.nodeStats=\n**Playing/Players:** {0}/{1}\
+  \n**CPUs/Load:** {2}/{3}\
+  \n**Used/Memory:** {4}/{5}\
+  \n**avg (Deficit/Nulled/Sent) per minute:** {6}/{7}/{8}\
+  \n**Last node restart:** {9}
