--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -199,3 +199,8 @@ musicPlayer.nodeStats=\n**Playing/Players:** {0}/{1}\
   \n**Used/Memory:** {4}/{5}\
   \n**avg (Deficit/Nulled/Sent) per minute:** {6}/{7}/{8}\
   \n**Last node restart:** {9}
+splay.entry=[{0}]({1}) - {2} `[{3}]`
+splay.menuTitle=Track Picker
+cancelButton=Cancel
+splay.cancelledTitle=Cancelled Track Picker
+splay.cancelledDesc=You picked nothing
