--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -92,3 +92,6 @@ serverMFATier={0, select, 0 {Disabled} other {Enabled}}
 serverVerificationLevel={0, select, 0 {None} 1 {Low} 2 {Medium} 3 {High} other {Very High}}
 serverContentFilterLevel={0, select, 0 {Disabled} 1 {Members without roles} other {All members}}
 serverNSFWLevel={0, select, 0 {Default} 1 {Explicit} 2 {Safe} other {Age Restricted}}
+botCannotInteractWithRole=I cannot interact with {0}
+role.give.gaveRole=Gave the {0} role to **{1}**
+role.take.tookRole=Took the {0} role from **{1}**
