refactor: playlist db model

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -194,13 +194,15 @@ musicPlayer.playerInfo=**Playing:** {0}\
   \n**Queue Size:** {1}\
   \n**Looped|LoopedQueue:** {2}|{3}\
   \n**Paused:** {4, select, true {yes} other {no}}
-musicPlayer.nodeStats=\n**Playing/Players:** {0}/{1}\
-  \n**CPUs/Load:** {2}/{3}\
-  \n**Used/Memory:** {4}/{5}\
-  \n**avg (Deficit/Nulled/Sent) per minute:** {6}/{7}/{8}\
-  \n**Last node restart:** {9}
+musicPlayer.nodeStats=\n**Node available:** {0}\
+  \n**Playing/Players:** {1}/{2}\
+  \n**CPUs/Load:** {3}/{4}\
+  \n**Used/Memory:** {5}/{6}\
+  \n**avg (Deficit/Nulled/Sent) per minute:** {7}/{8}/{9}\
+  \n**Last node restart:** {10}
 splay.entry=[{0}]({1}) - {2} `[{3}]`
 splay.menuTitle=Track Picker
 cancelButton=Cancel
 splay.cancelledTitle=Cancelled Track Picker
 splay.cancelledDesc=You picked nothing
+fix.fixed=Maybe music fixed :c
