fix: translation strings follow naming conventions

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -212,11 +212,11 @@ botCannotInteractWithRole=I cannot interact with {0}
 role.give.gaveRole=Gave the {0} role to **{1}**
 role.take.tookRole=Took the {0} role from **{1}**
 
-anilist.link.nouser=No such user found
+anilist.link.noUser=No such user found
 anilist.link.failed=Failed to get profile id
-anilist.link.succeeded=Succesfully linked your AniList profile!
-anilist.profile.you.nolink=You haven't linked your AniList profile yet.
-anilist.profile.other.nolink={0} hasn't linked their AniList profile yet.
+anilist.link.succeeded=Successfully linked your AniList profile!
+anilist.profile.you.noLink=You haven't linked your AniList profile yet.
+anilist.profile.other.noLink={0} hasn't linked their AniList profile yet.
 anilist.lookup.failed=Lookup failed with the following error: {0}
 anilist.lookup.title=Lookup results
 anilist.lookup.entry=[`{0}`]({1}) {2}
@@ -230,14 +230,14 @@ anilist.lookup.embed.chapters=Chapters
 anilist.lookup.embed.episodes=Episodes
 anilist.lookup.embed.duration=average {0} minutes
 anilist.lookup.embed.status=Status
-anilist.lookup.embed.sDate=Start Date
-anilist.lookup.embed.eDate=End Date
-anilist.lookup.embed.fName=First name
-anilist.lookup.embed.lName=Last name
-anilist.lookup.embed.nName=Native name
+anilist.lookup.embed.startDate=Start Date
+anilist.lookup.embed.endDate=End Date
+anilist.lookup.embed.firstName=First name
+anilist.lookup.embed.lastName=Last name
+anilist.lookup.embed.nativeName=Native name
 anilist.lookup.embed.appearances=Appearances
-anilist.lookup.embed.topAnimeG=Top anime genres
-anilist.lookup.embed.topMangaG=Top manga genres
+anilist.lookup.embed.topAnimeGenres=Top anime genres
+anilist.lookup.embed.topMangaGenres=Top manga genres
 anilist.lookup.embed.statistics=Statistics
 anilist.lookup.embed.statistics.none=None yet :(
 anilist.lookup.embed.animeStats=Watched **{0}** anime, consisting of **{1}** episodes and **{2}** minutes in total
