feat: Allow users to set AniList language preference

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -215,6 +215,7 @@ role.take.tookRole=Took the {0} role from **{1}**
 anilist.link.noUser=No such user found
 anilist.link.failed=Failed to get profile id
 anilist.link.succeeded=Successfully linked your AniList profile!
+anilist.preference.set=Successfully set your AniList language preference!
 anilist.profile.you.noLink=You haven't linked your AniList profile yet.
 anilist.profile.other.noLink={0} hasn't linked their AniList profile yet.
 anilist.lookup.failed=Lookup failed with the following error: {0}
