feat: Add osu! commands partially

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -248,3 +248,21 @@ anilist.lookup.embed.favAnime=Favourite anime
 anilist.lookup.embed.favManga=Favourite manga
 anilist.lookup.embed.favCharacter=Favourite characters
 anilist.lookup.embed.favourites=Favourites {0} 💗
+
+osu.noUser=No such user found
+osu.link.succeeded=Successfully linked your osu! profile!
+osu.profile.you.noLink=You haven't linked your osu! profile yet.
+osu.profile.other.noLink={0} hasn't linked their osu! profile yet.
+osu.user.title={0}'s {1} profile
+osu.user.gamesPlayed=Games played
+osu.user.gamesPlayed.format={0}
+osu.user.accuracy=Accuracy
+osu.user.accuracy.format={0, number, ###,###.##}%
+osu.user.level=Level
+osu.user.level.progress={0} `+{1}%`
+osu.user.scores=Scores
+osu.user.playtime=Playtime
+osu.user.rank=Rank
+osu.user.rank.list={0, select, null {} other {:globe_with_meridians: - {0}}}\n\
+  {2, select, null {} other {:flag_{1}: - {2}}}
+osu.user.joined=Joined {0, date, short} {0, time, short}
