feat: commands for configuring embed colors

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -248,3 +248,15 @@ anilist.lookup.embed.favAnime=Favourite anime
 anilist.lookup.embed.favManga=Favourite manga
 anilist.lookup.embed.favCharacter=Favourite characters
 anilist.lookup.embed.favourites=Favourites {0} 💗
+settings.embedColor.set=Set the embedColor {0, select, private {for you} other {for this server}} to {1}
+settings.embedColor.menuTitle=EmbedColor
+settings.embedColor.view={0, select, \
+  private {{1, select, \
+  null {You don't have a color set} \
+  other {Your color is currently set to: {1}}\
+  }} \
+  other {{1, select, \
+  null {The server does not have an embed color configured} \
+  other {The server color is currently set to: {1}}\
+  }}\
+  }
