feat: view top scores of a user

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -266,3 +266,10 @@ osu.user.rank=Rank
 osu.user.rank.list={0, select, null {} other {:globe_with_meridians: - {0}}}\n\
   {2, select, null {} other {:flag_{1}: - {2}}}
 osu.user.joined=Joined {0, date, short} {0, time, short}
+osu.scores.layout=**Beatmap:** {0}\n\
+  **Favourites / Playcount:** {1} / {2} `{3}%`\n\
+  **Hits / Total:** {4} / {5} `{6}%`\n\
+  **Accuracy:** `{7}%`\n\
+  **激 | 喝:** {8} | {9}\n\
+  {10}\n\
+  **Placed at:** {11}
