fix: further improvements and fixes

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -266,10 +266,20 @@ osu.user.rank=Rank
 osu.user.rank.list={0, select, null {} other {:globe_with_meridians: - {0}}}\n\
   {2, select, null {} other {:flag_{1}: - {2}}}
 osu.user.joined=Joined {0, date, short} {0, time, short}
-osu.scores.layout=**Beatmap:** {0}\n\
-  **Favourites / Playcount:** {1} / {2} `{3}%`\n\
-  **Hits / Total:** {4} / {5} `{6}%`\n\
-  **Accuracy:** `{7}%`\n\
-  **激 | 喝:** {8} | {9}\n\
-  {10}\n\
-  **Placed at:** {11}
+osu.scores.beatmapInfo=**Title** [{0}]({1})\n\
+  **Author** [{2}]({3})\n\
+  **Artist** {4}\n\
+  **BPM** {5}\n\
+  **Diff** {6}\n\
+  **Favourites / PlayCount** {7} / {8} `{9}%`
+osu.scores.scoreInfo=**Accuracy** `{0}%`\n\
+  **Rank | PP** {1} | `{2}pp`\n\
+  **Combo** x{3}\n\
+  **Score** {4}\n\
+  **Mods** {5}\n\
+  {6, select, mania {} other {**激 | 喝** `{7} | {8}`\n}}\
+  {9}\n\
+  **Placed at** {10}
+osu.scores.beatmapInfoTitle=Beatmap Info
+osu.scores.scoreInfoTitle=Score Info
+osu.scores.noScores=`{0}` has no {1} {2} scores
