feat: preferred osu gamemode

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -283,3 +283,5 @@ osu.scores.scoreInfo=**Accuracy** `{0}%`\n\
 osu.scores.beatmapInfoTitle=Beatmap Info
 osu.scores.scoreInfoTitle=Score Info
 osu.scores.noScores=`{0}` has no {1} {2} scores
+osu.preferredMode.set={0, null {Unset your preferred osu gameMode} other {Changed your osu gameMode preference to {0}}}
+osu.preferredMode.show=Your preferred osu mode is currently{0, select, null { unset} other {: {0}}}
