feat: merge some stuff into one command

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -285,3 +285,4 @@ osu.scores.scoreInfoTitle=Score Info
 osu.scores.noScores=`{0}` has no {1} {2} scores
 osu.preferredMode.set={0, null {Unset your preferred osu gameMode} other {Changed your osu gameMode preference to {0}}}
 osu.preferredMode.show=Your preferred osu mode is currently{0, select, null { unset} other {: {0}}}
+osu.profile.noIdProvided=You need to provide an osu username or id or a linked discord user
