feat: add ability to unlink accounts

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -251,6 +251,9 @@ anilist.lookup.embed.favourites=Favourites {0} 💗
 
 osu.noUser=No such user found
 osu.link.succeeded=Successfully linked your osu! profile!
+osu.link.show={0, select, null {Your account is not linked} other {Your account is linked to `{0}`}}
+osu.link.reset=You have been unlinked from your osu! account
+
 osu.profile.you.noLink=You haven't linked your osu! profile yet.
 osu.profile.other.noLink={0} hasn't linked their osu! profile yet.
 osu.user.title={0}'s {1} profile
