changed translation for beg, added TODO for cooldown in beg

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -1,6 +1,6 @@
 balance.show=You have **{0}** mel
 
-balance.beg=You received **{{0}}** mel from a kind stranger
+beg.receive=You received **{{0}}** mel from a kind stranger
 
 flip.flipped=Landed on **{0, select, 0 {Heads} other {Tails}}**. {1, select, 0 {Won} other {Lost}} **{2}** mel, your new balance is {3}
 flip.noMels=You don't have a single mel to your name - there is nothing to flip
