--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -305,4 +305,7 @@ osu.scores.noScores=`{0}` has no {1} {2} scores
 osu.preferredMode.set={0, select, null {Unset your preferred osu gameMode} other {Changed your osu gameMode preference to {0}}}
 osu.preferredMode.show=Your preferred osu mode is currently{0, select, null { unset} other {: {0}}}
 osu.profile.noIdProvided=You need to provide an osu username or id or a linked discord user
+ttt.failOpponentIsSelf=You cannot play tic tac toe against yourself.
+ttt.failOpponentInsufficientFunds=Your opponent has an insufficient amount of mel
+ttt.failOpponentIsInGame=The opponent is already in a game of tic-tac-toe
 
