feat: roles and raw command

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -45,6 +45,8 @@ skip.noNextTrack=No next track, destroyed the MusicPlayer
 skip.nextTrack=[Next]({0}): {1} `[{2}]`
 skip.title=Skipped by {0}
 
+rolesList.serverTitle=**Roles List** of {0}
+
 idInfo.info=Snowflake created at {0}\nMillis: `{1}`
 
 info.aboutFieldTitle=About
