feat: invite tracking

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -148,7 +148,12 @@ userInfo.memberInfoSection=```INI\n[Member Info]``` \
   **Join Time:** {3}\n\
   **Boost Time:** {4} \n\
   **Voice Status:** {5, select, true {Connected} other {Disconnected}} {6} \n\
-  **Can Melijn Interact:** {7, select, true {yes} other {no}}
+  **Can Melijn Interact:** {7, select, true {yes} other {no}}\n\u200b
+userInfo.inviteInfoSection=```INI\n[Invite Info]``` \
+  **Last used Invite Code**: {0}\n\
+  **Invite Code Owner**: {1}\n\
+  **First Join Time:**: {2}\n\
+  **Join Count:**: {3}\n
 arguments.guildId.noGuild=The given serverId does not resolve to a server
 serverInfo.guildOnlyOrArgumentPassed=Server info is guild only unless an argument is passed
 serverInfo.responseDescription=```INI\n[General Information]```\
