feat: Add /settings guild {get,toggle}

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -270,7 +270,10 @@ settings.embedColor.view={0, select, \
   other {The server color is currently set to `{1}`}\
   }}\
   }
-
+settings.guild.feature.toggle=Toggled feature `{0}` to {1}
+settings.guild.feature.state=Feature `{0}` is currently {1}
+settings.guild.feature.toggle.on=ON
+settings.guild.feature.toggle.off=OFF
 
 osu.noUser=No such user found
 osu.link.succeeded=Successfully linked your osu! profile!
