feat: Voice activity tracking

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -316,3 +316,7 @@ ttt.failOpponentIsSelf=You cannot play tic tac toe against yourself.
 ttt.failOpponentInsufficientFunds=Your opponent has an insufficient amount of mel
 ttt.failOpponentIsInGame=The opponent is already in a game of tic-tac-toe
 
+voiceactivity.personal.timespent=You have spent `{0}` in voice chats.
+voiceactivity.personal.timespent.none=You have not yet been in voice chat in this server.
+voiceactivity.leaderboard.timespent.line={0}. **{1}**: `{2}`
+voiceactivity.leaderboard.timespent.none=This server has not seen any voice activity yet.
