feat: tic-tac-toe vs bot now works :)

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -322,3 +322,4 @@ ttt.failOpponentIsInGame=The opponent is already in a game of tic-tac-toe
 voiceactivity.personal.timespent=You have spent `{0}` in voice chats.
 voiceactivity.leaderboard.timespent.none=This server has not seen any voice activity yet.
 voiceactivity.disabled=Voice activity tracking is not enabled for this server.
+ttt.failYourAreInGame=You ase already in a game, wait for it to time out or finish it.
