feat: v1 attendance commands

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -323,3 +323,4 @@ voiceactivity.personal.timespent=You have spent `{0}` in voice chats.
 voiceactivity.leaderboard.timespent.none=This server has not seen any voice activity yet.
 voiceactivity.disabled=Voice activity tracking is not enabled for this server.
 ttt.failYourAreInGame=You ase already in a game, wait for it to time out or finish it.
+attendance.suppliedInvalidIdOrMsgUrl=You should supply a valid attendance id OR message-link that points to an active attendance
