feat: override responses to be informative

--- a/bot/src/main/resources/translations/kordex/strings_override.properties
+++ b/bot/src/main/resources/translations/kordex/strings_override.properties
@@ -5,3 +5,23 @@ converters.playlist.signatureType=playlist
 converters.playlist.unknownPlaylistName=`{0}` is not an existing playlist, you can create them by adding a track with `/playlist add`
 
 commandContext.userNull=This command cannot be run by non-users
+
+cooldown.notifier.commandUser=You may use `{1}` again {0}.
+cooldown.notifier.commandUserChannel=You may use `{1}` in {2} again {0}.
+cooldown.notifier.commandUserGuild=You may use `{1}` in this server again {0}.
+cooldown.notifier.globalUser=You may use commands again {0}.
+cooldown.notifier.globalUserChannel=You may use commands in {1} again {0}.
+cooldown.notifier.globalUserGuild=You may use commands in this server again {0}.
+cooldown.notifier.globalChannel=Someone may use commands in {1} again {0}.
+cooldown.notifier.globalGuild=Someone may use commands in this server again {0}.
+cooldown.notifier.generic=You've hit a cooldown of type `{0}`.
+
+ratelimit.notifier.commandUser=You are being rate limited from using `{1}` until {0}.
+ratelimit.notifier.commandUserChannel=You are being rate limited from using `{1}` in {2} until {0}.
+ratelimit.notifier.commandUserGuild=You are being rate limited from using `{1}` in this server until {0}.
+ratelimit.notifier.globalUser=You are being rate limited from using commands until {0}.
+ratelimit.notifier.globalUserChannel=You are being rate limited from using commands in {1} until {0}.
+ratelimit.notifier.globalUserGuild=You are being rate limited from using commands in this server until {0}.
+ratelimit.notifier.globalChannel=Commands cannot be used in {1} until {0}.
+ratelimit.notifier.globalGuild=Commands cannot be used in this server until {0}.
+ratelimit.notifier.generic=You have hit a rate limit of type: `{0}`.
