--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -315,12 +315,25 @@ osu.scores.noScores=`{0}` has no {1} {2} scores
 osu.preferredMode.set={0, select, null {Unset your preferred osu gameMode} other {Changed your osu gameMode preference to {0}}}
 osu.preferredMode.show=Your preferred osu mode is currently{0, select, null { unset} other {: {0}}}
 osu.profile.noIdProvided=You need to provide an osu username or id or a linked discord user
+
 ttt.failOpponentIsSelf=You cannot play tic tac toe against yourself.
 ttt.failOpponentInsufficientFunds=Your opponent has an insufficient amount of mel
 ttt.failOpponentIsInGame=The opponent is already in a game of tic-tac-toe
+ttt.failYourAreInGame=You ase already in a game, wait for it to time out or finish it.
 
 voiceactivity.personal.timespent=You have spent `{0}` in voice chats.
 voiceactivity.leaderboard.timespent.none=This server has not seen any voice activity yet.
 voiceactivity.disabled=Voice activity tracking is not enabled for this server.
-ttt.failYourAreInGame=You ase already in a game, wait for it to time out or finish it.
+
 attendance.suppliedInvalidIdOrMsgUrl=You should supply a valid attendance id OR message-link that points to an active attendance
+attendance.messageLayout.active={0}\n\
+  \n\
+  Scheduled at: {1} (in: {2})\n\
+  Attendees:\n\
+  {3}
+
+attendance.messageLayout.finished={0}\n\
+  \n\
+  Was scheduled at: {1}\n\
+  Attendees:\n\
+  {2}
