feat: the code of all time

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -328,7 +328,8 @@ voiceactivity.disabled=Voice activity tracking is not enabled for this server.
 attendance.suppliedInvalidIdOrMsgUrl=You should supply a valid attendance id OR message-link that points to an active attendance
 attendance.messageLayout.active={0}\n\
   \n\
-  Scheduled at: {1} (in: {2})\n\
+  Scheduled at: {1}\n\
+  Scheduled in: {2}\n\
   Attendees:\n\
   {3}
 
