--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -338,3 +338,23 @@ attendance.messageLayout.finished={0}\n\
   Was scheduled at: {1}\n\
   Attendees:\n\
   {2}
+attendance.created=Created attendance entry!
+attendance.infoTitle=Attendance Info
+attendance.info=Id: `{11}`\n\
+  Topic: `{0}`\n\
+  Description: {1}\n\
+  Message Link: {2}\n\
+  Next Moment: {3}\n\
+  **Notify**\n\
+    * Notify Offset: {4}\n\
+    * Notify Role: {5}\n\
+  Close Offset: {6}\n\
+  Reschedule Offset: {7}\n\
+  NextStateChange: {9}\n\
+  State: {8}\n\
+  Schedule: {10}
+
+
+  
+
+
