feat: more argument checks, fixing the permission checks and draft for the edit command

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -353,6 +353,7 @@ attendance.info=Id: `{11}`\n\
   NextStateChange: {9}\n\
   State: {8}\n\
   Schedule: {10}
+duration.minimalValue=Must be a minimal value of {0}
 
 
   
