feat: Normalize names from the Apps menu

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -355,7 +355,6 @@ attendance.info=Id: `{11}`\n\
   Schedule: {10}
 duration.minimalValue=Must be a minimal value of {0}
 
-
-  
-
-
+namenormalization.fail.noSanitize=This user's name doesn't contain any sanitizable characters.
+namenormalization.fail.noPermission=I can't manage that person's nickname.
+namenormalization.success=Changed the user's name from {0} to {1}.
