feat: bulk name cleaning

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -358,3 +358,7 @@ duration.minimalValue=Must be a minimal value of {0}
 namenormalization.fail.noSanitize=This user's name doesn't contain any sanitizable characters.
 namenormalization.fail.noPermission=I can't manage that person's nickname.
 namenormalization.success=Changed the user's name from {0} to {1}.
+namenormalization.admin.nomembers=No members of this guild have names that must be sanitized.
+namenormalization.admin.header=Modifying the nickname of {0} member(s). This may take a while.
+namenormalization.admin.progress=({0} members done!)
+namenormalization.admin.done=Done cleaning usernames!
