--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -132,6 +132,7 @@ roleInfo.infoDescription=**Name** {0}\n\
   **Color** {8} | {9} | {10}\n\
   **Can Melijn Interact** {11}
 userInfo.userInfoSection=```INI\n[User Info]```\
+  **DisplayName:** {10}\n\
   **Name:** {0}\n\
   **Discriminator:** {1}\n\
   **ID:** {2}\n\
