refactor: capitalization of tr strings

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -322,9 +322,9 @@ ttt.failOpponentInsufficientFunds=Your opponent has an insufficient amount of me
 ttt.failOpponentIsInGame=The opponent is already in a game of tic-tac-toe
 ttt.failYourAreInGame=You ase already in a game, wait for it to time out or finish it.
 
-voiceactivity.personal.timespent=You have spent `{0}` in voice chats.
-voiceactivity.leaderboard.timespent.none=This server has not seen any voice activity yet.
-voiceactivity.disabled=Voice activity tracking is not enabled for this server.
+voiceActivity.personal.timeSpent=You have spent `{0}` in voice chats.
+voiceActivity.leaderboard.timeSpent.none=This server has not seen any voice activity yet.
+voiceActivity.disabled=Voice activity tracking is not enabled for this server.
 
 attendance.suppliedInvalidIdOrMsgUrl=You should supply a valid attendance id OR message-link that points to an active attendance
 attendance.messageLayout.active={0}\n\
@@ -356,10 +356,10 @@ attendance.info=Id: `{11}`\n\
   Schedule: {10}
 duration.minimalValue=Must be a minimal value of {0}
 
-namenormalization.fail.noSanitize=This user's name doesn't contain any sanitizable characters.
-namenormalization.fail.noPermission=I can't manage that person's nickname.
-namenormalization.success=Changed the user's name from {0} to {1}.
-namenormalization.admin.nomembers=No members of this guild have names that must be sanitized.
-namenormalization.admin.header=Modifying the nickname of {0} member(s). This may take a while.
-namenormalization.admin.progress=({0} members done!)
-namenormalization.admin.done=Done cleaning usernames!
+nameNormalization.fail.noSanitize=This user's name doesn't contain any sanitizable characters.
+nameNormalization.fail.noPermission=I can't manage that person's nickname.
+nameNormalization.success=Changed the user's name from {0} to {1}.
+nameNormalization.admin.noMembers=No members of this guild have names that must be sanitized.
+nameNormalization.admin.header=Modifying the nickname of {0} member(s). This may take a while.
+nameNormalization.admin.progress=({0} members done!)
+nameNormalization.admin.done=Done cleaning usernames!
