--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -30,7 +30,7 @@ queue.playingEntry=[{0, select, true {Paused} other {Playing}}]({1}) - **{2}** `
 queue.queueEntry=[#{0}]({1}) - {2} `[{3}]`
 
 queue.title=Queue
-queue.fakefooter=\n\nQueue duration: **{0}**\
+queue.fakeFooter=\n\nQueue duration: **{0}**\
   \nQueue size: **{1}**
 
 play.manyAddedTitle=Tracks added by {0}
