--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -363,3 +363,5 @@ nameNormalization.admin.noMembers=No members of this guild have names that must 
 nameNormalization.admin.header=Modifying the nickname of {0} member(s). This may take a while.
 nameNormalization.admin.progress=({0} members done!)
 nameNormalization.admin.done=Done cleaning usernames!
+nameNormalization.admin.confirmationQuestion=Are you sure?
+nameNormalization.admin.cancel=Cancelled cleaning usernames.
