--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -365,3 +365,6 @@ nameNormalization.admin.progress=({0} members done!)
 nameNormalization.admin.done=Done cleaning usernames!
 deleted.nothing=Deleted nothing
 leaderboard.guildOnly=The GuildXP option can only be used inside servers
+currency=Mel
+leaderboard.globalXP=Global XP
+leaderboard.guildXP=Server XP
