Added the flip times command

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -3,6 +3,8 @@ balance.show=You have **{0}** mel
 beg.receive=You received **{0}** mel from a kind stranger
 
 flip.flipped=Landed on **{0, select, 0 {Heads} other {Tails}}**. {1, select, 0 {Won} other {Lost}} **{2}** mel, your new balance is {3}
+flip.timesFlipped=Landed **{0}x** on **{1, select, 0 {Heads} other {Tails}}** and **{2}x** on **{3, select, 0 {Heads} other {Tails}}**. {4, select, 0 {Won} other {Lost}} **{5}** mel, your new balance is {6}
+flip.timesTooMuch=Try betting a lower amount, this is too much.
 flip.noMels=You don't have a single mel to your name - there is nothing to flip
 
 triedBettingNothing=You cannot bet 0 or less mel
