--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -363,5 +363,12 @@ nameNormalization.admin.noMembers=No members of this guild have names that must 
 nameNormalization.admin.header=Modifying the nickname of {0} member(s). This may take a while.
 nameNormalization.admin.progress=({0} members done!)
 nameNormalization.admin.done=Done cleaning usernames!
+
+deleted.nothing=Deleted nothing
+leaderboard.guildOnly=The GuildXP option can only be used inside servers
+currency=Mel
+leaderboard.globalXP=Global XP
+leaderboard.guildXP=Server XP
+
 nameNormalization.admin.confirmationQuestion=Are you sure?
 nameNormalization.admin.cancel=Cancelled cleaning usernames.
