--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -367,10 +367,11 @@ nameNormalization.admin.progress=({0} members done!)
 nameNormalization.admin.done=Done cleaning usernames!
 
 deleted.nothing=Deleted nothing
-leaderboard.guildOnly=The GuildXP option can only be used inside servers
+leaderboard.guildOnly=This leaderboard type can only be viewed inside servers
 currency=Mel
 leaderboard.globalXP=Global XP
 leaderboard.guildXP=Server XP
 
 nameNormalization.admin.confirmationQuestion=Are you sure?
 nameNormalization.admin.cancel=Cancelled cleaning usernames.
+leaderboard.voice=Voice
